@@ -22,8 +22,9 @@ IN DEVELOPMENT
      supported transports.
      (Vincent Ladeuil)
 
-   * New rich-root format, recording the same data about tree roots that's
-     recorded for all other directories.  (Aaron Bentley)
+   * New rich-root and rich-root-pack formats, recording the same data about
+     tree roots that's recorded for all other directories.
+     (Aaron Bentley, #164639)
 
    * ``switch`` command added for changing the branch a lightweight checkout
      is associated with and updating the tree to reflect the latest content
